@@ -1,19 +1,19 @@
 //
-//  ========================================================================
-//  Copyright (c) 1995-2020 Mort Bay Consulting Pty Ltd and others.
-//  ------------------------------------------------------------------------
-//  All rights reserved. This program and the accompanying materials
-//  are made available under the terms of the Eclipse Public License v1.0
-//  and Apache License v2.0 which accompanies this distribution.
+// ========================================================================
+// Copyright (c) 1995-2020 Mort Bay Consulting Pty Ltd and others.
 //
-//      The Eclipse Public License is available at
-//      http://www.eclipse.org/legal/epl-v10.html
+// This program and the accompanying materials are made available under
+// the terms of the Eclipse Public License 2.0 which is available at
+// https://www.eclipse.org/legal/epl-2.0
 //
-//      The Apache License v2.0 is available at
-//      http://www.opensource.org/licenses/apache2.0.php
+// This Source Code may also be made available under the following
+// Secondary Licenses when the conditions for such availability set
+// forth in the Eclipse Public License, v. 2.0 are satisfied:
+// the Apache License v2.0 which is available at
+// https://www.apache.org/licenses/LICENSE-2.0
 //
-//  You may elect to redistribute this code under either of these licenses.
-//  ========================================================================
+// SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
+// ========================================================================
 //
 
 package org.eclipse.jetty.start;
@@ -409,7 +409,7 @@ public class StartArgs
                         System.out.printf(" %s:%s = %s%n", p, key, props.getProperty(String.valueOf(key)));
                     }
                 }
-                catch (Throwable ex)
+                catch (Throwable th)
                 {
                     System.out.printf(" %s NOT READABLE!%n", p);
                 }
@@ -616,7 +616,8 @@ public class StartArgs
                 }
             }
         }
-        StartLog.debug("Expanded JPMS directives:%nadd-modules: %s%npatch-modules: %s%nadd-opens: %s%nadd-exports: %s%nadd-reads: %s",
+        jmodAdds.add("ALL-MODULE-PATH");
+        StartLog.debug("Expanded JPMS directives:%n  add-modules: %s%n  patch-modules: %s%n  add-opens: %s%n  add-exports: %s%n  add-reads: %s",
             jmodAdds, jmodPatch, jmodOpens, jmodExports, jmodReads);
     }
 
@@ -1140,7 +1141,8 @@ public class StartArgs
         if ("--jpms".equals(arg))
         {
             jpms = true;
-            // Need to fork because we cannot use JDK 9 Module APIs.
+            // Forking is simpler; otherwise we need to add the
+            // JPMS directives such as "--add-modules" via API.
             exec = true;
             return;
         }
